deployment_files/frontend/testnode.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus-frontend
  namespace: frontend
spec:
  selector:
    app: nexus-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31000
  type: NodePort
