deployment_files/frontend/angular-ingress-nipio.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-frontend-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.192-168-83-150.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-frontend
            port:
              number: 80
