deployment_files/frontend/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-frontend
  namespace: frontend
  labels:
    app: nexus-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nexus-frontend
  template:
    metadata:
      labels:
        app: nexus-frontend
    spec:
      containers:
      - name: nexus-frontend
        image: tareksammoud/nexus-frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-frontend
  namespace: frontend
spec:
  selector:
    app: nexus-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-frontend-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.192-168-125-151.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-frontend
            port:
              number: 80
