deployment_files/frontend/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-frontend-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-port-in-redirects: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-frontend
            port:
              number: 80
